--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
+  --primary-color: #003366;
+  --secondary-color: #ffff99;
 }
 
 html,
 body {
+  background-color: #ffffff;
   height: 100%;
   font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 header {
@@ -15,18 +18,76 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+  height: 10vh;
+  max-height: 10vh;
+  background-color: var(--primary-color);
 }
 
 .title {
   margin-left: 20px;
+  color: var(--secondary-color);
 }
 
 .quiz-container {
   margin-right: 20px;
 }
+
 .quiz-button {
-  font-size: 13px;
+  font-size: 11px;
   padding: 10px;
   border-radius: 6px;
-  border-color: yellow;
+  font-weight: 700;
+  color: white;
+  background-color: var(--primary-color);
+  border-color: var(--secondary-color);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  /* altura total da página - altura do header - altura do footer */
+  margin: auto;
+}
+
+.secao-um {
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.text-container {
+  width: 50%;
+  align-items: center;
+}
+
+.image-container {
+  width: 50%;
+}
+.text-title {
+  font-size: 45px;
+}
+
+.text p {
+  font-size: 20px;
+  margin: 0;
+}
+
+.secao-dois {
+  width: 100%;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.secao-dois p {
+  margin: 0;
+  font-size: 20px;
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 5vh;
+  background-color: var(--primary-color);
 }
